# multi-string-search

./: .gitignore  README.md  pyproject.toml
src/multi_string_search/: __init__.py
tests/: dataset.txt  fixtures.py  test_factor_oracle.py  test_naive.py
